mesa (13.0.0~rc2-2) UNRELEASED; urgency=medium

  * Make mesa-vulkan-drivers.install more generic. Should fix FTBFS on
    some arches.
  * rules: Remove superfluous linux check.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 25 Oct 2016 16:53:57 +0200

mesa (13.0.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * control, rules: Use llvm/clang 3.9 (Closes: #836913).
  * control: Bump libclc dependencies.
  * Bump libdrm-dev build-dep to 2.4.69 per configure.ac.
  * Remove libudev-dev and libudev1 dependencies per configure.ac.
  * Enable OpenCL on kfreebsd-* since we don't need udev anymore.
  * Enable radv vulkan driver.
  * control: Remove superfluous linux- prefix.
  * not-installed: wglext.h got dropped from the tarball.
  * mesa-common-dev: Remove mesa_glinterop.h, upstream doesn't install
    it anymore.
  * Update libgles2-mesa.symbols.
  * Update libgl1-mesa-glx.symbols.
  * source/local-options: Update extend-diff-ignore.
  * Update mesa-vulkan-drivers.lintian-overrides.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 25 Oct 2016 10:59:08 +0200

mesa (12.0.3-3) unstable; urgency=medium

  * Limit libgbm1 dependency to !hurd-any (Closes: #841774).  Thanks,
    Samuel Thibault!

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 24 Oct 2016 10:18:09 +0200

mesa (12.0.3-2) unstable; urgency=medium

  * control: Add libtxc-dxtn-s2tc as an alternative in libgl1-mesa-dri's
    Recommends (Closes: #839658).
  * control: Add strictly versioned dependency on libgbm1 to libegl1-
    mesa.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 21 Oct 2016 09:49:37 +0200

mesa (12.0.3-1) unstable; urgency=medium

  * New upstream release.
  * Enable vc4 on arm64.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 15 Sep 2016 13:38:40 +0200

mesa (12.0.2-1) unstable; urgency=medium

  * New upstream release.
  * rules: Pass -c4 to dpkg-gensymbols through dh_makeshlibs, got
    dropped with the migration to dh.