@@ -3,6 +3,8 @@ mesa (13.0.0~rc2-2) UNRELEASED; urgency=medium
   * Make mesa-vulkan-drivers.install more generic. Should fix FTBFS on
     some arches.
   * rules: Remove superfluous linux check.
+  * rules: Remove vulkan_intel.h only where it get installed in tmp.
+    Should fix FTBFS on some more arches.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 25 Oct 2016 16:53:57 +0200
 
